--- a/writing/Manuscript_June2021.Rmd
+++ b/writing/Manuscript_June2021.Rmd
@@ -28,7 +28,7 @@ affiliation:
 authornote: |
 
 abstract: |
- Childen's drawings of common object categories become dramatically more recognziable across development. What are the major factors that explain this developmental change? Here, we examined the degree to which these developmental changes in recognizibility vary across different drawing tasks (i.e. drawing from observation vs. from memory), geographical locations (San Jose, US vs. Beijing, China), and with children's tracing abilities. To do so, we collecting digital drawings of object categories (e.g., cat, airplane) from 4-9 year-olds (N=253). Overall, we show broad consistency in these developmental trajectories acros both drawing tasks and these two geographical locations, and we find that children's tracings abilites are good predictors of the recognizability of the drawings that they produce. In addition, we find that children recruited near Beijing, China produced more recognizable drawings but showed similar tracing abilities to childen recruited near San Jose, USA. Overall, this work suggests that the developmental trajectory of children's drawings are remarkably consistent and not easily explainable by changes in their visuomotor control or working memory capacity. 
+ Childen's drawings of common object categories become dramatically more recognziable across development. What are the major factors that explain this developmental change? Here, we examined the degree to which these developmental changes in recognizibility vary across different drawing tasks (i.e. drawing from observation vs. from memory), geographical locations (San Jose, US vs. Beijing, China), and with children's tracing abilities. To do so, we collecting digital drawings of object categories (e.g., cat, airplane) from 4-9 year-olds (N=253). Overall, we show broad consistency in these developmental trajectories acros both drawing tasks and these two geographical locations, and we find that children's tracings abilites are good predictors of the recognizability of the drawings that they produce. In addition, we find that children from Beijing, China produced more recognizable drawings but showed similar tracing abilities to childen from San Jose, USA. Overall, this work suggests that the developmental trajectory of children's drawings are remarkably consistent and not easily explainable by changes in their visuomotor control or working memory capacity. 
  
 keywords          : "children's drawings, visual production, tracing, object recognition, visuomotor control"
 wordcount         : "X"
@@ -199,7 +199,7 @@ d <- humans %>%
                                  TRUE ~ age_numeric)) %>%
   left_join(tracing_by_sub) %>%
   mutate(site = fct_recode(site, "San Jose" = "CDM", "Beijing" = "THU"))%>%
-  mutate(condition = fct_recode(condition, "From perception" = "P", "From memory" = "S")) 
+  mutate(condition = fct_recode(condition, "Picture cue" = "P", "Verbal cue" = "S")) 
 
 humans_and_models_merged <- humans %>%
   group_by(unique_ids, category, image_name_short) %>% # group by each drawing of each category
@@ -265,7 +265,7 @@ We used a combination of deep CNN activations and logistic regressions to obtain
 human_v_model = cor.test(humans_and_models_merged$prop_correct, humans_and_models_merged$correct_or_not)
 ```
 
-To assess our main hypotheses, we fit linear mixed effects models to the human recognition scores to assess the factors that influenced the recognizability of the drawings that children produced. A first linear mixed effect model was fit to the recognizability scores for each drawing, including fixed effects of children's age (in years), geographical site (San Jose vs. Beijing), and drawing task (drawing from perception vs. memory) and the three way interaction between these key variables. We initially planned to include random slopes for the effect of drawing task on each child (as this varied within-subjects), and random slopes for the effect the full three-way interactions between task, age, and site on each category. However, all models with this complicated random effects structure failed to converge, and the reported models use the maximal random effects structure that did converge (see corresponding codebase).
+To assess our main hypotheses, we fit linear mixed effects models to the human recognition scores to assess the factors that influenced the recognizability of the drawings that children produced. A first linear mixed effect model was fit to the recognizability scores for each drawing, including fixed effects of children's age (in years), geographical site (San Jose vs. Beijing), and drawing task (verbal cue vs. picture cue) and the three way interaction between these key variables. We initially planned to include random slopes for the effect of drawing task on each child (as this varied within-subjects), and random slopes for the effect the full three-way interactions between task, age, and site on each category. However, all models with this complicated random effects structure failed to converge, and the reported models use the maximal random effects structure that did converge (see corresponding codebase).
 
 In a secondary analysis, we aimed to understand the degree to which any of the above effects were mediated by (1) children's tracing abilities and (2) the amount of effort that children expended while drawings. We thus ran the same main model while also now including fixed effects of children's estimated tracing score (see Measuring Tracing Abilities), the time children spent drawing (in seconds), the mean intensity of the drawing (i.e. percentage of non-white pixels), and the number of strokes children used. All predictors were scaled to have a mean of 0 and a standard deviation of 1. Finally, we also assessed the degree to which tracing ability development differed by geographical site, where tracing scores were modeled as a function of age (in years), site, and their interaction, with random intercepts for each participant. 
  
@@ -296,20 +296,30 @@ full_model_with_effort_out = summary(full_model_with_effort)
 
 ```
 
+```{r}
+site_difference <- lmer(prop_correct ~ scale(age_numeric)^2*site +
+                      (1 | unique_ids) +
+                      (1 | category),
+      data = d)
+
+# frustratingly can't get anything with random slopes to converge!
+site_difference_out = summary(site_difference)
+
+```
+
  
 # Results
 ### Confirmatory Analyses
-Overall, we found relative consistency in the developmental trajectory of children's drawings. Figure \ref{fig:main-results} shows the recognizability of children's drawings at each age as a function of the drawing task and the geographical site that they were located in; All model coefficients can be found in Table 1.  First, we found steady changes in the recognizability of children's drawings across this age range, replicating prior work with an observational dataset collected at a free-standing kiosk [@long2021parallel]. Critically, these changes in recognizability did not depend on the drawing task children completed: children's drawings were equally recognizable when they were asked to "Draw this rabbit as it looks in the picture" and they were simply asked "What about a rabbit? Can you draw a rabbit." While we anticipated that older children might produce more recognizable drawings when drawing from observation -- as do adults when presented with canonical photographs of object categories [@yang2021visual] -- this was not the case. 
+Overall, we found relative consistency in the developmental trajectory of children's drawings. Figure \ref{fig:main-results} shows the recognizability of children's drawings at each age as a function of the drawing task and the geographical site that they were located in; All model coefficients can be found in Table 1.  First, we found steady changes in the recognizability of children's drawings across this age range, replicating prior work with an observational dataset collected at a free-standing kiosk [@long2021parallel]. Critically, these changes in recognizability did not depend on the drawing task children completed: children's drawings were equally recognizable when they were asked to "Draw this rabbit as it looks in the picture" and they were simply asked "What about a rabbit? Can you draw a rabbit." While we anticipated that older children might produce more recognizable drawings when drawing from observation -- as do adults when presented with canonical photographs of object categories [@yang2021visual] -- this was not the case.  However, we did observe a main effect of geographical site: overall, we found that children from Beijing, China tended to produce more recognizable drawings than children from San Jose, USA (see coefficients in Table 1). A closer look directly comparing the recognizability of the drawings made at children at each site hints that the children from Beijing, China may tend to produce more recognizable drawings earlier in development.  
 
-However, we did observe a main effect of geographical site: Children from Beijing, China tended to produce more recognizable drawings than children from San Jose, USA. Figure \ref{fig:main-results} suggests that this may be because children from Beijing, China tended to reach
-In a second set of analyses, we aimed to understand the nature of this difference in recognizability. We hypothesized that any differences in the recognizability of children's drawings across sites would be mediated by the amount of effort children expended while drawing or their tracing abilities.  We thus first examined how effort and tracing abilities varied across task, age, and geographical location. Figure \ref{fig:effort-covariates} shows three effort covariates - average intensity, number of strokes used, and time spent drawing -- measured for each drawing as a function of children's age, drawing task, and geographical site.  Cchildren tended to spend more time drawing when asked to draw "the [rabbit] as it looks in the picture", and children recruited outside Beijing tended to spend more time drawing overall. In contrast, children's tracing abilities did not vary across geographical site: Figure \ref{fig:tracing} shows the average tracing score at each age at each site. While children's tracing abilities increased steadily with age, as in prior work [@long2021parallel], children recruited at both sites produced equally good tracings.
+In a second set of analyses, we aimed to understand the nature of this difference in recognizability across sites. We hypothesized that any differences in the recognizability of children's drawings across sites would be mediated by the amount of effort children expended while drawing or their tracing abilities.  We thus first examined how effort and tracing abilities varied across task, age, and geographical location. Figure \ref{fig:effort-covariates} shows three effort covariates - average intensity, number of strokes used, and time spent drawing -- measured for each drawing as a function of children's age, drawing task, and geographical site.  Children tended to spend more time drawing when asked to draw "the [rabbit] as it looks in the picture", and children from Beijing tended to spend more time drawing overall. In contrast, children's tracing abilities did not vary across geographical site: Figure \ref{fig:tracing} shows the average tracing score at each age at each site. While children's tracing abilities increased steadily with age, as in prior work [@long2021parallel], children from both sites produced equally good tracings.
 
 We then included children's average tracing scores and effort covariates measured for each drawing (average intensity, number of strokes used, and time spent drawing) as fixed effects into a second linear mixed-effects model (described in Statistical Models). If the amount of effort spent or children's tracing abilities accounted the differences between sites that we observed, we reasoned that we should no longer observe a main effect of geographical location on drawing recognizability. Contra this hypothesis, however, we still observed a significant effect of geographical site (see Table 2), despite the fact that individual children's tracing abilities were strong predictors of how recognizable their drawings were. In addition, the amount of time a child spent drawing was in fact a significant negative predictor of recognizability -- indicating that the amount of effort that children expended did not necessarily result in a drawing that was more recognizable to others. 
 
 Thus, these results suggest that these two groups of children differ in their ability to produce recognizable drawings of object categories in a way that is not easily explainable by effort covariates or tracing abilities. In a third set of exploratory analyses, we examined how the developmental trajectory of the recognizability of children's drawings differ for different object categories. Intuitively, some object categories (e.g., cat) may be easier to draw than others (e.g., watch), resulting in shallower or steeper changes in recognizability over age. However, we had no strong hypotheses about how these trajectories might additionally vary with geographical locations. 
 
 ### Exploratory Analyses
-Figure \ref{fig:item-effects} shows the recognizability of children's drawings for each of the 12 categories a function of geographical location and children's age and reveal considerable variability.  For example, certain categories (e.g., cats and rabbits) were overall more difficult for children to depict such that they were distinct from one another, particularly for younger children. In addition, children recruited near Beijing produced more recognizable drawings of certain categories at all ages -- including airplanes, birds, and rabbits -- while older children recruited near San Jose produced more recognizable drawings of bikes.  Figure \ref{fig:example-drawings} shows recognizable, randomly sampled example drawings from 6-year-olds at each category, site, and condition. These exploratory analyses thus reveal systematic differences between object categories and geographical site that do not seem easily attributable to differences in effort.
+Figure \ref{fig:item-effects} shows the recognizability of children's drawings for each of the 12 categories a function of geographical location and children's age and reveal considerable variability.  For example, certain categories (e.g., cats and rabbits) were overall more difficult for children to depict such that they were distinct from one another, particularly for younger children. In addition, children from Beijing produced more recognizable drawings of certain categories at all ages -- including airplanes, birds, and rabbits -- while older children from San Jose produced more recognizable drawings of bikes.  Figure \ref{fig:example-drawings} shows recognizable, randomly sampled example drawings from 6-year-olds at each category, site, and condition. These exploratory analyses thus reveal systematic differences between object categories and geographical site that do not seem easily attributable to differences in effort.
 
 ```{r render-drawings, include=FALSE}
 # set.seed(123)
@@ -354,20 +364,48 @@ cor_by_age_by_site_by_cond_indiv <- d %>%
 ```
 
 ```{r main-results, fig.env="figure", out.width = "\\textwidth", fig.pos = "H", fig.align = "center", fig.width=8, fig.height=5, fig.cap = "Proportion of drawings recognized as a function of the age of the child who completed each drawing, the geographical site they were tested at (San Jose vs. Beijing), and the type of drawing task they completed. Individual data points represent drawings within each condition by an individual participant and are slightly jittered. Error bars show bootstrapped 95 percent cofnidence intervals."}
-ggplot(cor_by_age_by_site_by_cond, aes(age_numeric,mean, col = condition)) +
+ggplot(cor_by_age_by_site_by_cond, aes(age_numeric,mean, col = site)) +
   geom_pointrange(aes(ymin = ci_lower, ymax = ci_upper), position=position_dodge(width=.2)) +
   geom_point(data = cor_by_age_by_site_by_cond_indiv, aes(x=age_numeric, y=avg_cor), position=position_jitterdodge(jitter.width = NULL,
   jitter.height = .001,
   dodge.width = 0.2,
-  seed = 123), alpha=.2) +
+  seed = 123), alpha=.05) +
   theme_few(base_size = base_size_chosen) + 
   labs(x='Age (in years)', y='Proportion drawings recognized') +
   ylim(-.01,1.1) + 
   geom_smooth(span=20, alpha=.1) +
-  scale_color_discrete(name="") +
+  scale_color_viridis(discrete=TRUE, name="", option='B', begin=0, end=.4) +
   theme(legend.position = 'bottom') +
   geom_hline(yintercept = 1/12, linetype="dashed", color="grey") +
-  facet_grid(~site)
+  facet_grid(~condition)
+```
+
+
+```{r site-difference, include=FALSE, eval=FALSE, fig.env="figure", out.width = "\\textwidth", fig.pos = "H", fig.align = "center", fig.width=4, fig.height=4, fig.cap = "Proportion of drawings recognized as a function of the age of the child who completed each drawing and the geographical site they were tested at (San Jose vs. Beijing). Individual data points represent drawings within each condition by an individual participant and are slightly jittered. Error bars show bootstrapped 95 percent confidence intervals."}
+cor_by_age_by_site <- d %>%
+  group_by(unique_ids,category,age_numeric, site) %>%
+  summarize(avg_cor = mean(prop_correct)) %>%
+  group_by(age_numeric, site) %>%
+  multi_boot_standard(col = "avg_cor")
+
+cor_by_age_by_site_by_indiv <- d %>%
+  group_by(unique_ids,category,age_numeric, site) %>%
+  summarize(avg_cor = mean(prop_correct))
+
+ggplot(cor_by_age_by_site, aes(age_numeric,mean, col = site)) +
+  geom_pointrange(aes(ymin = ci_lower, ymax = ci_upper), position=position_dodge(width=.2)) +
+  geom_point(data = cor_by_age_by_site_by_indiv, aes(x=age_numeric, y=avg_cor), position=position_jitterdodge(jitter.width = NULL,
+  jitter.height = .001,
+  dodge.width = 0.2,
+  seed = 123), alpha=.05) +
+  theme_few(base_size = base_size_chosen) +
+  labs(x='Age (in years)', y='Proportion drawings recognized') +
+  ylim(-.01,1.1) +
+  geom_smooth(span=1, alpha=.1) +
+  scale_color_viridis(discrete=TRUE, name="", option='B', begin=0, end=.4) +
+  theme(legend.position = 'bottom') +
+  geom_hline(yintercept = 1/12, linetype="dashed", color="grey")
+
 
 ```
 
@@ -398,7 +436,7 @@ Intercept & 0.73 & 0.02 & 31.62 & 34.74 & 0.000 \\
 \end{table}
 
 ```{r output-models-2}
-cleaned_names_full_model_with_effort = c("Intercept","Task","Age","Site","Est. tracing score","Avg. intensity", "Draw duration", "Number of strokes","Task*Age","Task&Site", "Age*Site","Task*Age*Site")
+cleaned_names_full_model_with_effort = c("Intercept","Task","Age","Site","Est. tracing score","Avg. intensity", "Draw duration", "Number of strokes","Task*Age","Task*Site", "Age*Site","Task*Age*Site")
 
 rownames(full_model_with_effort_out$coefficients)<-cleaned_names_full_model_with_effort
 
@@ -421,7 +459,7 @@ Intercept & 0.72 & 0.02 & 34.02 & 37.49 & 0.000 \\
   Draw duration & -0.03 & 0.01 & 1692.69 & -3.42 & 0.001 \\
   Number of strokes & 0.03 & 0.01 & 2655.21 & 4.67 & 0.000 \\
   Task*Age & -0.02 & 0.01 & 2623.63 & -1.72 & 0.086 \\
-  Task\&Site & -0.01 & 0.02 & 2630.59 & -0.45 & 0.655 \\
+  Task*Site & -0.01 & 0.02 & 2630.59 & -0.45 & 0.655 \\
   Age*Site & -0.01 & 0.02 & 415.59 & -0.74 & 0.462 \\
   Task*Age*Site & 0.00 & 0.02 & 2638.72 & 0.18 & 0.858 \\
    \hline
@@ -536,17 +574,18 @@ ggplot(item_effects_not_spread, aes(x=as.numeric(age_numeric), y=mean, color=sit
 ```
 
 # Discussion
-Here, we examined the consistency and variability in the developmental trajectory of children's drawings across two different drawing tasks and geographical locations. First, we found that asking children to draw from memory ("Can you draw a [cat]?") vs. from perception ("Can you draw this [cat] as it looks in the picture?") had little effect on the recognizability of the drawings that children produced. While older children may have integrated specific visual information that was present in the photographs, in keeping with prior work [@bremmer1984prior], this did not seem to change how recognizable their drawings were to outside observers. Thus, these results suggest that younger children's drawings are unlikely to be constrained by their ability to recall specific, canonical exemplars of object categories when they are trying to draw them. 
+Here, we examined the consistency and variability in the developmental trajectory of children's drawings across two different drawing tasks and geographical locations. First, we found that asking children from a verbal cue("Can you draw a [cat]?") vs. from a picture cue ("Can you draw this [cat] as it looks in the picture?") had little effect on the recognizability of the drawings that children produced. While older children may have integrated specific visual information that was present in the photographs, in keeping with prior work [@bremmer1984prior], this did not seem to change how recognizable their drawings were to outside observers. Thus, these results suggest that younger children's drawings are unlikely to be constrained by their ability to recall specific, canonical exemplars of object categories when they are trying to draw them. 
 
-Instead, we found that the recognizability of children's drawings differed between our two different geographical sites -- Beijing, China and San Jose, USA  Why might this be the case?  Our initial hypothesis was that children who had daily practice with a non-orthographic, complex writing system would exhibit greater dexterity in our tracing assessment task -- and that this dexterity could be a factor in how recogizable their drawings were.  However, children across the two sites showed equivalent shape tracing abilities -- despite the fact that children's individual tracing scores were strong predictors of the recognizability of the drawings that they produced. Thus, this finding both confirms the idea that children's visuomotor abilities strongly influence the drawings they produce yet further suggests that it is far from the only factor that does so.
+Instead, we found that the recognizability of children's drawings differed between our two different geographical sites -- Beijing, China and San Jose, USA  Why might this be the case?  Our initial hypothesis was that children who had daily practice with a non-orthographic, complex writing system would exhibit greater dexterity in our tracing assessment task -- and that this dexterity could be a factor in how recognizable their drawings were.  However, children across the two sites showed equivalent shape tracing abilities -- despite the fact that children's individual tracing scores were strong predictors of the recognizability of the drawings that they produced. Thus, this finding both confirms the idea that children's visuomotor abilities strongly influence the drawings they produce yet further suggests that it is far from the only factor that does so.
 
-A second possibility that recognizability may have differed across sites is that children recruited at preschools near Beijing were simply more engaged with the task than children recruited at museums near San Jose, USA. A more academic context could have created an environment in which children felt incentivized to spend more effort on their drawings. However, our measures of children's effort (e.g., amount of time spent drawing) did not account for differences in recognizability across sites.  Furthermore, we saw systematic differences in the object categories that were more or less recognizable across sites, which is not well-explained by this account.  A final possibility is that children across these two sites could differ in the amount of practice they have drawing common object categories. If so, then children who spend more time drawing may simply have more practice communicating about the diagnostic features of different object categories. In future work, surveys that assesses the amount of time that children at these two sites -- as well as many others -- spend drawing outside of these experimental contexts could address this hypothesis.
+A second possibility that recognizability may have differed across sites is that children recruited at preschools near Beijing were simply more engaged with the task than children recruited at museums near San Jose, USA. A more academic context could have created an environment in which children felt incentivized to spend more effort on their drawings. However, our measures of children's effort (e.g., amount of time spent drawing) did not account for differences in recognizability across sites.  Furthermore, we saw systematic differences in the object categories that were more or less recognizable across sites, which is not well-explained by this account.  
 
-A natural question for future work concerns the relationship between the degree to which children across different geographical sites might also show differences in their ability to recognize drawings of object categories. In a U.S. based population, prior work found that older children not only produce more recognizable drawings of object categories but tend to be better skilled at recognizing other children's drawings [@long2021parallel]. Thus, if children in different environmentsand contexts tend to spend more time practicing drawing, these children may also be more skilled at recognizing drawings of object categories and perhaps explicitly identifying the distinctive visual features of these categories.
+While a long literature has sought to examine variation in cognitive abilities across cultural contexts, we note that this is there is substantial variation within different geographical locations and countries that often goes unmeasured.  Drawings from children within the same country -- or even area code --  may differ in the very same ways children's drawings differ in this dataset. For example,  children across could reasonably differ in the amount of practice they have drawing common object categories. If so, then children who spend more time drawing may simply have more practice communicating about the diagnostic features of different object categories. In future work, surveys that assesses the amount of time that children at these two sites -- as well as many others -- spend drawing outside of these experimental contexts could address this hypothesis.  
 
 However, these results of course do not preclude the possibility that children's drawings differed across these two conditions or geographical sites in other interesting ways beyond their recognizability. Finer-grained measurements of these drawings could reveal differences with respect to the exact visual features that children chose to include, the strategies they employed while drawing, or the order in which they chose to draw certain elements of these categories.  We have thus made this dataset and the resulting code publicly available for these exploratory analyses. 
+A natural question for future work concerns the relationship between the degree to which children with difference kinds of experience might also show differences in their ability to recognize drawings of object categories. In a U.S. based population, prior work found that older children not only produce more recognizable drawings of object categories but tend to be better skilled at recognizing other children's drawings [@long2021parallel]. Thus, if children in different environmental contexts tend to spend more time practicing drawing, these children may also be more skilled at recognizing drawings of object categories and perhaps explicitly identifying the distinctive visual features of these categories.
 
-More broadly, however, while this work moves beyond investigating the drawings of children at a single geographical location, these children are still in many ways non-representative of the genera population. Many children within the same country or area code may differ in the very same ways children's drawings differ in this dataset. At the same time, children in more rural populations may spend considerably less time both consuming and producing drawings of object categories. Thus, these developmental trajectories could thus vary in several ways that are not captured by the slice of experience represented in the the present dataset.
+Furthermore, while this work moves beyond investigating the drawings of children at a single geographical location, these children are still in many ways non-representative of the general population. For example, children in more rural populations may spend considerably less time both consuming and producing drawings of object categories. Thus, these developmental trajectories could thus vary in several ways that are not captured by the slice of experience represented in the the present dataset.
 
 Nonetheless, these results take a first step towards characterizing the consistency and variability in the developmental trajectory of children's drawings across development  two different tasks and geographical locations.  We propose that the systematic collection of digital drawings across many different populations, ages, and tasks has potential to shed light on the processes that result in the development of children's drawing abilities.  
 
